--- a/CryptoQueue/CryptoQueue/CryptoQueue.csproj
+++ b/CryptoQueue/CryptoQueue/CryptoQueue.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Funcoes.cs" />
     <Compile Include="ListaCircular.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
