Fiz umas coisas ai

--- a/CryptoQueue/CryptoQueue/CryptoQueue.csproj
+++ b/CryptoQueue/CryptoQueue/CryptoQueue.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Funcoes.cs" />
-    <Compile Include="ListaCircular.cs" />
+    <Compile Include="FilaCircular.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
